# python-articles-scraper

./: pyproject.toml
python_medium_articles/: index.py
python_tech_articles/: index.py  scraped_articles.json
python_tech_articles/news/: get_news_details.py  news_article.json  scraped_news.json  search_news.py
python_tech_articles/tech/: article.json  get_article_details.py
tests/: test_python_medium_articles.py
